fix: update test to pass it